Fix canPlayType for WebM VP8 on older Macs without VP9 https://bugs.webkit.org/show_bug.cgi?id=241920

Reviewed by Eric Carlson and Jean-Yves Avenard.
Original patch by: Brion Vibber <brion@pobox.com>
Patch amended by: Youssef Soliman <y_soliman@apple.com>

SourceBufferParserWebM::isContentTypeSupported called
isVP9DecoderAvailable for both VP9 and VP8 codecs, which caused
some older Macs to misreport a failure of VP8 support in
HTMLMediaElement.canPlayType, MediaSource.isTypeSupported, and
the filtering of video sources based on codec lists.

Example of failing hardware is an early-2015 13" MacBook Pro,
whose integrated GPU supports VP8 but not VP9. A test case
is not included as I was unable to replicate the failing
conditions at runtime by adding disable-for-testing options
successfully.

* platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(SourceBufferParserWebM::isContentTypeSupported): Included
calls to isVP8DecoderAvailable as appropriate.
* LayoutTests/media/media-source/media-source-istypesupported-vp8-without-vp9-expected.txt: Added.
* LayoutTests/media/media-source/media-source-istypesupported-vp8-without-vp9.html: Added.
* Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.h:
* Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
(WebCore::VP9TestingOverrides::setVP9DecoderDisabled):
(WebCore::isVP9DecoderAvailable):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::Internals):
(WebCore::Internals::setVP9DecoderDisabledForTesting):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::setMediaOverridesForTesting):
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::updateMediaConfiguration):
* Source/WebKit/WebProcess/GPU/media/MediaOverridesForTesting.h:
(WebKit::MediaOverridesForTesting::encode const):
(WebKit::MediaOverridesForTesting::decode):

Canonical link: https://commits.webkit.org/254013@main